--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-size: calc(7px + 2vmin);
 }
 
 .App-logo {
@@ -10,12 +11,10 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: calc(0px + 8vmin);
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(7px + 2vmin);
   color: white;
 }
 
