--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@ form {
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #9efff9;
   height: calc(4vmin);
   vertical-align: center;
   font-size: calc(7px + 2vmin);
