--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,9 @@
   text-align: center;
   font-size: calc(7px + 2vmin);
 }
-
+body {
+  background-color: #404552;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -22,7 +24,7 @@ form {
   border-radius: 5px; 
 }
 .button {
-  background-color: #282c34;
+  background-color: #5294e2;
   color: white;
   margin-left: 5%;
   margin-top: .5vmin;
@@ -42,13 +44,13 @@ form {
   font-size:calc(5px + 2vmin);
 }
 .boardRow {
-  color: #000000;
+  color: #ffffff;
   text-decoration:none;
   font-size:calc(10px + 2vmin);
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #383c4a;
   height: calc(4vmin);
   vertical-align: center;
   font-size: calc(7px + 2vmin);
@@ -60,12 +62,12 @@ form {
 }
 
 .boardListing {
-  background-color: #ededed;
+  background-color: #4b5162;
   padding: 1vmin;
 }
 .boardListing:hover {
-  background-color: #dedede;
-  padding: 2vmin;
+  background-color: #4b5162;
+  padding: 1vmin;
 }
 
 @keyframes App-logo-spin {
