--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,73 +1,103 @@
+/* header that shows up on every page? */
+
 .App {
   text-align: center;
   font-size: calc(7px + 2vmin);
-  font-family: "Wingdings";
+  position: fixed;
+  width: 100%;
 }
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
+.App-header {
+  background-color: #000000;
+  height: calc(4vmin);
+  vertical-align: center;
+  font-size: calc(5px + 2vmin);
+  color: white;
+}
+.App-link {
+  color: #61dafb;
+}
+
+/*  */
+.standardLink {
+  display:inline;
+  float: right;
+  align: center;  
+  padding:0px 12px 0px 10px;
+  color:#ffffff;
+  text-decoration:none;
+  font-size:calc(5px + 2vmin);
+}
+.standardLink:hover{
+  color: black;
+  background-color: white;
+}
+.boardRow {
+  color: #000000;
+  text-decoration: none;
+  font-size:calc(10px + 2vmin);
+}
+
+.boardListing {
+  background-color: #ead3c1;
+  padding: 1vmin;
+  border: 1px solid #a21747;
+  border-radius: 10px;
+  margin: 20px 150px;
+}
+.boardListing:hover {
+  background-color: #FFF3EB;
+  padding: 1vmin;
+  border: 1px solid #a21747;
+  border-top-width: 1px;
+}
+#boards {
+
+}
+body {
+  background-image: url("./spacecropped.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* New board page */
 form {
-  text-align: left;
+  text-align: center;
+  padding-top: 20px;
+  color: white;
+  font-family: 'Palatino';
 }
 .textBox {
-  margin-left: 5%;
-  margin-top: .25vmin;
   width: 90%;
   height: 5vmin;
   font-size: 2vmin;
   border-top: none; 
   border-left: none;
-  border-radius: 5px; 
+  border-radius: 5px;
+  margin: 5px;
 }
 .button {
   background-color: #282c34;
   color: white;
-  margin-left: 5%;
-  margin-top: .5vmin;
   width: 90%;
   height: 5vmin;
   font-size: 2vmin;
   border: none;
   border-radius: 5px;
+  margin: 5px;
 }
 
-.standardLink {
-  display:inline;
-  float:right;
-  padding:0px 10px 0px 10px;
-  color:#ffffff;
-  text-decoration:none;
-  font-size:calc(5px + 2vmin);
-}
-.boardRow {
+.button:hover {
+  background-color: #ead3c1;
   color: #000000;
-  text-decoration:none;
-  font-size:calc(10px + 2vmin);
 }
 
-.App-header {
-  background-color: #9efff9;
-  height: calc(4vmin);
-  vertical-align: center;
-  font-size: calc(7px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-.boardListing {
-  background-color: #ededed;
-  padding: 1vmin;
-}
-.boardListing:hover {
-  background-color: #dedede;
-  padding: 2vmin;
-}
 
 @keyframes App-logo-spin {
   from {
