--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,35 @@
-
 .App {
   text-align: center;
   font-size: calc(7px + 2vmin);
-  position: fixed;
-  width: 100%;
+}
+body {
+  background-color: #404552;
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
-.App-header {
-  background-color: #000000;
-  height: calc(4vmin);
-  vertical-align: center;
-  font-size: calc(7px + 2vmin);
-  color: white;
+form {
+  align-items: center;
 }
-.App-link {
-  color: #61dafb;
+
+.textBox {
+  width: 90%;
+  height: 5vmin;
+  font-size: 2vmin;
+  border-top: none; 
+  border-left: none;
+  border-radius: 5px; 
+}
+.button {
+  background-color: #5294e2;
+  color: white;
+  width: 90%;
+  height: 5vmin;
+  font-size: 2vmin;
+  border: none;
+  border-radius: 5px;
 }
 
 .standardLink {
@@ -29,112 +40,32 @@
   text-decoration:none;
   font-size:calc(5px + 2vmin);
 }
-.standardLink:hover{
-  color: black;
-  background-color: white;
-}
-
-body {
-  background-image: url("./spacecropped.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 .boardRow {
-  color: #000000;
-  text-decoration: none;
+  color: #ffffff;
+  text-decoration:none;
   font-size:calc(10px + 2vmin);
 }
 
-.options{
-  height: auto;
-  width: 100%;
-  color:"#ffffff";
-  margin-top: 2vmin;
-  margin-bottom: 2vmin;
-}
-.options h3{
-  background-color: #282c34;
+.App-header {
+  background-color: #383c4a;
+  height: calc(4vmin);
+  vertical-align: center;
+  font-size: calc(7px + 2vmin);
   color: white;
-  margin: 10px;
-  padding: 5px;
-  height: 5vmin;
-  font-size: 3vmin;
-  border: none;
-  border-radius: 5px;
-}
-.options h3:hover {
-  background-color: #ead3c1;
-  color: #000000;
 }
 
-
+.App-link {
+  color: #61dafb;
+}
 
 .boardListing {
-  background-color: #ead3c1;
+  background-color: #4b5162;
   padding: 1vmin;
-  border: 1px solid #a21747;
-  border-radius: 10px;
-  margin: 20px 150px;
 }
 .boardListing:hover {
-  background-color: #FFF3EB;
+  background-color: #4b5162;
   padding: 1vmin;
-  border: 1px solid #a21747;
-  border-top-width: 1px;
 }
-
-/* New board page */
-form {
-  text-align: center;
-  padding-top: 20px;
-  color: white;
-  font-family: 'Palatino';
-}
-.textBox {
-  width: 90%;
-  height: 5vmin;
-  font-size: 2vmin;
-  border-top: none; 
-  border-left: none;
-  border-radius: 5px;
-  margin: 5px;
-}
-.button {
-  background-color: #282c34;
-  color: white;
-  width: 90%;
-  height: 5vmin;
-  font-size: 2vmin;
-  border: none;
-  border-radius: 5px;
-  margin: 5px;
-}
-.button:hover {
-  background-color: #ead3c1;
-  color: #000000;
-}
-
-
-/* board page/new swim lane */
-.newLane {
-  background-color: #ead3c1;
-  flex: 0 0 auto;
-  border-radius: 7px;
-  margin-left: 3vmin;
-  width: 20vmax;
-  height: 15vmin;
-  border: 1px solid #a21747;
-  border-radius: 10px;
-}
-.newLane:hover {
-  background-color: #FFF3EB;
-  border: 1px solid #a21747;
-}
-
-
-
-
-
 
 @keyframes App-logo-spin {
   from {
