--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,19 @@
+/* header and body */
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
 .App {
   text-align: center;
   font-size: calc(7px + 2vmin);
   position: fixed;
   width: 100%;
+  font-family: 'Press Start 2P', cursive;
+
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
+} 
 .App-header {
   background-color: #000000;
   height: calc(4vmin);
@@ -39,10 +43,52 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+
+
+/*list of boards page/homepage */
 .boardRow {
   color: #000000;
+  font-size: 18px;
+  width: 80%;
   text-decoration: none;
-  font-size:calc(10px + 2vmin);
+  font-family: 'Press Start 2P', cursive;
+}
+.boardListing {
+  background-color: #ead3c1;
+  padding: 1vmin;
+  border: 1px solid #a21747;
+  border-radius: 10px;
+  margin: 1% 10%;
+}
+.boardListing:hover {
+  background-color: #FFF3EB;
+  padding: 1vmin;
+  border: 1px solid #a21747;
+  border-top-width: 1px;
+}
+
+
+
+/* view one board w options */
+
+
+.theStupidFUckingKANBANLogoInTheTopRightCorner__LikeSeriouslyThisLogoIsResponsibleForSooooManyStylingIssues__FuckThisLogo {
+   margin-left: "10px";
+  float: "left";
+  display: inline;
+}
+
+
+.title{
+  color: white;
+  background-color: #000000;
+  border: solid 1px #000000;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: 0px;
+  font-family: 'Press Start 2P', cursive;
+  
 }
 
 .options{
@@ -61,29 +107,45 @@ body {
   font-size: 3vmin;
   border: none;
   border-radius: 5px;
+  border: 1px solid #282c34;;
 }
 .options h3:hover {
-  background-color: #ead3c1;
-  color: #000000;
-}
-
-
-
-.boardListing {
-  background-color: #ead3c1;
-  padding: 1vmin;
-  border: 1px solid #a21747;
-  border-radius: 10px;
-  margin: 20px 150px;
-}
-.boardListing:hover {
   background-color: #FFF3EB;
-  padding: 1vmin;
-  border: 1px solid #a21747;
-  border-top-width: 1px;
+  color: #a21747;
+  border: 1px solid #a21747;  
 }
 
-/* New board page */
+/* swim lanes */
+.newLane {
+  background-color: #ead3c1;
+  flex: 0 0 auto;
+  border-radius: 7px;
+  margin-left: 3vmin;
+  width: 20vmax;
+  height: 15vmin;
+  border: 1px solid #a21747;
+  border-radius: 10px; 
+  color: #a21747;
+  font-weight: bold;
+  font-family: 'Palantino';
+  padding: 5px;
+}
+
+.plusSign {
+  font-size:50px;
+  margin-top: 12px;
+}
+.newLane:hover {
+  color: #ffffff;
+  background-color: #282c34;
+  border: 1px solid #a21747;
+}
+
+
+
+
+
+/* create new board page */
 form {
   text-align: center;
   padding-top: 20px;
@@ -115,21 +177,6 @@ form {
 }
 
 
-/* board page/new swim lane */
-.newLane {
-  background-color: #ead3c1;
-  flex: 0 0 auto;
-  border-radius: 7px;
-  margin-left: 3vmin;
-  width: 20vmax;
-  height: 15vmin;
-  border: 1px solid #a21747;
-  border-radius: 10px;
-}
-.newLane:hover {
-  background-color: #FFF3EB;
-  border: 1px solid #a21747;
-}
 
 
 
