--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,6 +56,10 @@
   color: black;
   background-color: white;
 }
+html, body {
+  margin:0;
+  padding:0;
+}
 
 body {
   background-image: url("./spacecropped.jpg");
@@ -63,7 +67,18 @@ body {
   background-repeat: no-repeat;
 }
 
-
+#sideBarActivator {
+  display: inline;
+  float: right;
+  margin: 0px;
+  padding: 0px 10px 8px 10px;
+  background-color: #000;
+  color: #fff;
+}
+#sideBarActivator:hover {
+  background-color: #fff;
+  color: #000;
+}
 
 /*list of boards page/homepage */
 .boardRow {
@@ -92,7 +107,7 @@ body {
 
 
 /* view one board w options */
-.title{
+.titleDiv{
   color: white;
   background-color: black;
   /* border: solid 1px #282c34; */
@@ -101,6 +116,9 @@ body {
   /* font-family: 'Press Start 2P', cursive; */
   font-family: 'Palatino';
   
+}
+.title{
+  display: inline;  
 }
 .options{
   height: auto;
@@ -194,4 +212,60 @@ form {
   to {
     transform: rotate(360deg);
   }
+}
+
+#menu {
+  position: absolute;
+  display:none;
+  z-index: 999;
+  width: 100%;
+  height:100%;
+  
+}
+#menuActual {
+  width: 25%;
+  height: 100%;
+  background-color: cadetblue;
+  float: right;
+}
+#menuSetup{
+  transition:.25s;
+  background-color:#000000;
+  width: 75%;
+  height: 100%;
+  float: left;
+  opacity: 0;
+}
+#menuSetup:hover{
+  opacity: .5;
+}
+
+.slide-in {
+  animation: slide-in 0.5s forwards;
+  -webkit-animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+  animation: slide-out 0.5s forwards;
+  -webkit-animation: slide-out 0.5s forwards;
+}
+  
+@keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+}
+  
+@keyframes slide-out {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(100%); }
+}
+
+@-webkit-keyframes slide-out {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(100%); }
 }
