--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,15 @@
-/* header and body */
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 .App {
   text-align: center;
-  font-size: calc(7px + 2vmin);
-  position: fixed;
-  width: 100%;
-  /* font-family: 'Press Start 2P', cursive; */
-  font-family: 'Palatino';
+  font-size: 30px;
   color: white;
-
 }
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-} 
-.App-header {
-  background-color: #000000;
-  height: calc(4vmin);
-  vertical-align: center;
-  font-size: calc(7px + 2vmin);
-
+body {
+  background-color: #404552;
 }
 
+form {
+  text-align: center;
+}
 
 .textBox {
   width: 90%;
@@ -32,166 +19,185 @@
   border-left: none;
   border-radius: 5px; 
 }
+
 .button {
-  background-color: #5294e2;
-  color: white;
+  background-color: #5479a7;
   width: 90%;
   height: 5vmin;
   font-size: 2vmin;
   border: none;
   border-radius: 5px;
 }
+.button:hover {
+  background-color: #7da2cf;
+}
+
+.App-header {
+  background-color: #2d313d;
+  height: 45px;
+  font-size: 25px;
+  color: white;
+}
 
 .standardLink {
-  display:inline;
   float: right;
-  padding:0px 10px 0px 10px;
+  padding:8px 10px 0 10px;
   color:#ffffff;
   text-decoration:none;
-  font-size:calc(5px + 2vmin);
-  margin: 3px
+  font-size: 20px;
 }
 
-.standardLink:hover{
-  color: black;
-  background-color: white;
+.standardLink:hover {
+  height: 35px;
+  background-color: #70788b;
+  border-radius: 20px;
 }
 
-body {
-  background-image: url("./spacecropped.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-
-
-/*list of boards page/homepage */
 .boardRow {
-  color: #000000;
-  font-size: 18px;
-  width: 80%;
-  text-decoration: none;
-  /* font-family: 'Press Start 2P', cursive; */
-  font-family: 'Palatino';
-}
-.boardListing {
-  background-color: #ead3c1;
-  padding: 1vmin;
-  border: 1px solid #a21747;
-  border-radius: 10px;
-  margin: 1% 10%;
-
-}
-.boardListing:hover {
-  background-color: #FFF3EB;
-  padding: 1vmin;
-  border: 1px solid #a21747;
-  border-top-width: 1px;
-}
-
-
-
-/* view one board w options */
-.title{
   color: white;
-  background-color: black;
-  /* border: solid 1px #282c34; */
-  padding-bottom: 8px;
-  margin-top: 0px;
-  /* font-family: 'Press Start 2P', cursive; */
-  font-family: 'Palatino';
-  
-}
-.options{
-  height: auto;
-  width: 100%;
-  color: white;
-  margin: 15px;
- }
-.options h3{
-  background-color: #282c34;
-  color: white;
-  margin: 10px;
-  padding: 5px;
-  font-size: 15px;
-  border-radius: 5px;
-  border: 1px solid #282c34;
-  opacity: 0.9;
-}
-.options h3:hover {
-  background-color: #FFF3EB;
-  color: #a21747;
-  border: 1px solid #a21747;  
+  text-decoration:none;
+  font-size: 25px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-/* swim lanes */
-.newLane {
-  background-color: #ead3c1;
-  flex: 0 0 auto;
-  margin: 0vmin 3vmin 0vmin 3vmin;
-  width: 20vmax;
-  border: 1px solid #a21747;
-  border-radius: 10px; 
-  color: #a21747;
-  font-weight: bold;
-  font-family: 'Palantino';
-  padding: 5px;
-  height: 75%;  /*change this back to 90% when options are moved to drop down menu*/
-  opacity: 0.9;
-}
-.newLane:hover {
-  background-color: #FFF3EB;
-  border: 1px solid #a21747;
-}
-.newLane p {
-  font-size: 30px;
-  display: center;
-}
-
-
-
-/* create new board page */
-form {
+.boardListing {
   text-align: center;
-  padding-top: 20px;
-  color: white;
-  font-family: 'Palatino';
+  width: 97%;
+  height: 4em;
+  margin: 20px 1.5%;
+  padding-top: 7px;
+  border-radius: 20px;
+  background-color: #4b5162;
 }
-.textBox {
-  width: 90%;
-  height: 5vmin;
-  font-size: 2vmin;
-  border-top: none; 
-  border-left: none;
-  border-radius: 5px;
-  margin: 5px;
+
+.boardListing:hover {
+  background-color: #70788b;
+  width: 97%;
+  height: 4em;
+  margin: 20px 1.5%;
+  border-radius: 20px;
+  padding-top: 7px;
 }
-.button {
+
+.title {
+  margin:0;
+  width: 100%;
+  padding-bottom: 8px;
+  background-color: #282c3479;
+}
+
+.options{
+  height: 25px;
+  width: 100%;
+  color:"#ffffff";
+  margin-top: .2em;
+  margin-bottom: 1em;
+}
+.options h3{
   background-color: #282c34;
   color: white;
-  width: 90%;
-  height: 5vmin;
-  font-size: 2vmin;
-  border: none;
+  margin: 10px;
+  padding: 5px;
+  height: 20px;
+  font-size: 15px;
   border-radius: 5px;
-  margin: 5px;
 }
-.button:hover {
-  background-color: #ead3c1;
-  color: #000000;
+.options h3:hover {
+  background-color: #4b5162;
 }
 
+.newLane {
+  font-size: 25px;
+  background-color: #4b5162ef;
+  flex: 0 0 auto;
+  margin-left: 10px;
+  width: 20vmax;
+  height: 95px;
+  border-radius: 10px;
+}
 
+.newLane:hover {
+  background-color: #70788bef;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#sideBarActivator {
+  float: right;
+  width: 50px;
+  margin-right: 10px;
+  margin-top:-50px;
+}
+#sideBarActivator:hover {
+  background-color: #70788b;
+  height: 45px;
+  border-radius: 5px;
+}
+
+#menu {
+  position:fixed;
+  top: 0;
+  right: 0;
+  display:none;
+  width: 100%;
+  height:100%;
+}
+#menuActual {
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background-color: #282c34;
+  float: right;
+  z-index: 999;
+}
+
+#menuActual p {
+  font-size: 20px;
+  text-align: left;
+  padding: 1em 2em;
+}
+
+#menuSetup{
+  transition:.25s;
+  background-color:#282c34;
+  width: 75%;
+  height: 100%;
+  float: left;
+  opacity: 0;
+  z-index: 999;
+}
+#menuSetup:hover{
+  opacity: .5;
+}
+
+.slide-in {
+  animation: slide-in 0.5s forwards;
+  -webkit-animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+  animation: slide-out 0.5s forwards;
+  -webkit-animation: slide-out 0.5s forwards;
+}
+  
+@keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+}
+  
+@keyframes slide-out {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(100%); }
+}
+
+@-webkit-keyframes slide-out {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(100%); }
 }
