--- a/client/public/styles/space.css
+++ b/client/public/styles/space.css
@@ -118,3 +118,173 @@ form {
 .exitPopoutText {
   font-size: 10vmin;
 }
+
+
+/* header and body */
+
+.App {
+  text-align: center;
+  position: fixed;
+  width: 100%;
+}
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+} 
+.App-header {
+  height: calc(4vmin);
+  vertical-align: center;
+}
+.App-link {
+  color: #61dafb;
+}
+.standardLink {
+  display:inline;
+  float: right;
+  padding:0px 10px 0px 10px;
+  text-decoration:none;
+}
+.standardLink:hover{
+  border-radius: 5px;
+}
+
+
+
+/*list of boards page/homepage */
+.boardRow {
+  width: 80%;
+  text-decoration: none;
+}
+.boardListing {
+  margin: 1% 10%;
+}
+
+
+
+/* swim lanes */
+.newLane {
+  flex: 0 0 auto;
+  margin: 0vmin 3vmin 0vmin 3vmin;
+  width: 20vmax;
+  border-radius: 10px; 
+  padding: 5px;
+  height: 90%;
+  opacity: 0.9;
+}
+
+
+
+/* create new board page */
+form {
+  text-align: center;
+  padding-top: 20px;
+}
+.textBox {
+  width: 90%;
+  height: 5vmin;
+  margin: 5px;
+}
+.button {
+  width: 90%;
+  height: 5vmin;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+
+
+/* view one board w options */
+.title{
+  padding-bottom: 8px;
+  margin-top: 0px;
+}
+#sideBarActivator {
+  float: right;
+  width: 50px;
+  margin-right: 10px;
+  margin-top:-50px;
+}
+#sideBarActivator:hover {
+  height: 25px;
+  border-radius: 5px;
+}
+#menu {
+  position:fixed;
+  top: 0;
+  right: 0;
+  display:none;
+  width: 100%;
+  height:100%;
+}
+#menuActual {
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background-color: #282c34;
+  float: right;
+  z-index: 999;
+}
+#menuActual p {
+  text-align: left;
+  padding: 1em 2em;
+}
+#menuSetup {
+  transition:.25s;
+  width: 75%;
+  height: 100%;
+  float: left;
+  opacity: 0;
+  z-index: 999;
+}
+#menuSetup:hover {
+  opacity: .  5;
+}
+.exitPopoutText {
+  vertical-align: middle;
+  display: table-cell;
+}
+.deletePopout {
+  background-color: #FF2424;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  transition: .25s;
+}
+
+/* animations */
+.slide-in {
+  animation: slide-in 0.5s forwards;
+  -webkit-animation: slide-in 0.5s forwards;
+}
+.slide-out {
+  animation: slide-out 0.5s forwards;
+  -webkit-animation: slide-out 0.5s forwards;
+}
+@keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+}
+@-webkit-keyframes slide-in {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(0%); }
+} 
+@keyframes slide-out {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(100%); }
+}
+@-webkit-keyframes slide-out {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(100%); }
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
