--- a/client/public/styles/Dark.css
+++ b/client/public/styles/Dark.css
@@ -131,6 +131,8 @@ form {
   width: 20vmax;
   height: 95%;
   border-radius: 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .swimLane:hover {
@@ -151,6 +153,7 @@ form {
 
 #menu {
   position:fixed;
+  z-index: 999;
   top: 0;
   right: 0;
   display:none;
@@ -171,6 +174,17 @@ form {
   font-size: 20px;
   text-align: left;
   padding: 1em 2em;
+}
+
+#addCardForm {
+  display: none;
+  width: 100%;
+  height: 25%;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+  background-color: #282c34;
+  float: right;
 }
 
 .exitPopoutText {
@@ -214,6 +228,16 @@ form {
   animation: slide-out 0.5s forwards;
   -webkit-animation: slide-out 0.5s forwards;
 }
+
+.slide-up {
+  animation: slide-up 0.8s forwards;
+  -webkit-animation: slide-up 0.5s forwards;
+}
+
+.slide-down {
+  animation: slide-down 0.5s forwards;
+  -webkit-animation: slide-down 0.5s forwards;
+}
   
 @keyframes slide-in {
   0% { transform: translateX(100%); }
@@ -233,4 +257,41 @@ form {
 @-webkit-keyframes slide-out {
   0% { -webkit-transform: translateX(0%); }
   100% { -webkit-transform: translateX(100%); }
+}
+
+@keyframes slide-down {
+  0% { transform: translateY(0%); }
+  100% { transform: translateY(100%); }
+}
+
+@-webkit-keyframes slide-down {
+  0% { transform: translateY(0%); }
+  100% { transform: translateY(100%); }
+}
+  
+@keyframes slide-up {
+  0% { transform: translateY(100%); }
+  100% { transform: translateY(0%); }
+}
+
+@-webkit-keyframes slide-up {
+  0% { -webkit-transform: translateY(100%); }
+  100% { -webkit-transform: translateY(0%); }
+}
+
+.form {
+  margin: 0px;
+}
+
+button.form {
+  width:95%;
+  padding: 15px 0px;
+  margin-bottom: 2%;
+  border: none;
+  border-radius: 5px;
+  background-color: #70788b;
+  color: #ffffff;
+}
+button.formAdd {
+  background-color: #5479a7;
 }
