--- a/client/src/space.css
+++ b/client/src/space.css
@@ -36,6 +36,7 @@
   background-color: white;
   cursor: pointer;
   border-radius: 5px;
+  height: 20px;
 }
 body {
   background-image: url("./spacecropped.jpg");
@@ -153,9 +154,6 @@ form {
   width: 80%;
   text-decoration: none;
 }
-.boardListing {
-  margin: 1% 10%;
-}
 
 
 
@@ -190,7 +188,7 @@ form {
   float: right;
   width: 50px;
   margin-right: 10px;
-  margin-top:-50px;
+  margin-top:-30px;
 }
 #sideBarActivator:hover {
   height: 25px;
