--- a/client/src/space.css
+++ b/client/src/space.css
@@ -60,6 +60,7 @@ body {
   background-color: #FFF3EB;
   border: 1px solid #a21747;
   border-top-width: 1px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -253,6 +254,15 @@ form {
     margin: 0px;
     font-size: 20px
 }
+button.formAdd {
+    background-color: #ead3c1;
+    color: #a21747;
+}
+button.form {
+    background-color: #FFF3EB;
+    color: #a21747;
+}
+
 
 
 /* animations */
