--- a/client/src/space.css
+++ b/client/src/space.css
@@ -91,27 +91,17 @@ body {
 } 
 
 .swimLane {
-  background-color: #ead3c1;
-  border: 1px solid #a21747;
-  color: #a21747;
-  font-weight: bold;
-  font-family: 'Orbitron', sans-serif;
-  flex: 0 0 auto;
-  margin: 0vmin 3vmin 0vmin 3vmin;
-  width: 20vmax;
-  border-radius: 10px; 
-  padding: 5px;
-  height: 90%;
-  opacity: 0.9;
-}
-.swimLane:hover {
-  background-color: #FFF3EB;
-  border: 1px solid #a21747;
-  cursor: pointer;
-}
-.swimLane p {
+  text-align: left;
   font-size: 25px;
-} 
+  background-color: #ead3c1ef;
+  flex: 0 0 auto;
+  margin-left: 10px;
+  padding-left: 10px;
+  margin-left: 10px;
+  width: 20vmax;
+  height: 95%;
+  border-radius: 10px;
+}
 
 
 /* create new board page */
