--- a/client/public/styles/space.css
+++ b/client/public/styles/space.css
@@ -93,16 +93,19 @@ body {
 .swimLane {
   text-align: left;
   font-size: 25px;
-  background-color: #ead3c1ef;
+  font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
+  background-color: #ead3c1;
+  border: 1px solid #a21747;
+  color:#a21747;
   flex: 0 0 auto;
-  margin-left: 10px;
-  padding-left: 10px;
-  margin-left: 10px;
+  margin: 0vmin 3vmin 0vmin 3vmin;
   width: 20vmax;
-  height: 95%;
+  height: 90%;
   border-radius: 10px;
+  padding: 5px;
+  opacity: 0.9;
 }
-
 
 /* create new board page */
 form {
