Cursor: Pointer areas added

--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -90,6 +90,7 @@ form {
 }
 
 .newLane {
+  cursor: pointer;
   font-size: 25px;
   background-color: #4b5162ef;
   flex: 0 0 auto;
@@ -149,6 +150,7 @@ form {
 }
 
 .addCardBtn {
+  cursor: pointer;
   height: 75px;
   /*width: calc(100%-10vmin);*/
   margin: 0;
@@ -167,6 +169,7 @@ form {
 }
 
 .card {
+  cursor: pointer;
   background-color: #70788b;
   margin: 0;
   margin-right: 10px;
@@ -188,6 +191,7 @@ form {
 }
 
 #sideBarActivator {
+  cursor: pointer;
   float: right;
   width: 50px;
   margin-right: 10px;
@@ -219,6 +223,7 @@ form {
 }
 
 #menuActual p {
+  cursor: pointer;
   font-size: 20px;
   text-align: left;
   padding: 1em 2em;
