recent cursor: pointer areas added

--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -21,6 +21,7 @@ form {
 }
 
 .button {
+  cursor: pointer;
   background-color: #5479a7;
   width: 90%;
   height: 5vmin;
@@ -350,6 +351,7 @@ form {
 }
 
 button.cardForm {
+  cursor: pointer;
   width:95%;
   padding: 15px 0px;
   margin-bottom: 2%;
@@ -359,6 +361,7 @@ button.cardForm {
   color: #ffffff;
 }
 button.formAdd {
+  cursor: pointer;
   background-color: #5479a7;
   margin: 0 0 25px 0;
 }
