--- a/client/public/styles/space.css
+++ b/client/public/styles/space.css
@@ -87,10 +87,12 @@ body {
 }
 .SLTitle::placeholder {
   color: #a21747;
+  font-family: 'Orbitron', sans-serif;
 }
 .SLHeader input[type=text]:focus {
   background-color: transparent;
   color: #a21747;
+  font-family: 'Orbitron', sans-serif;
 }
 .SLHeader input[type=text] {
   color: #a21747;
@@ -99,6 +101,7 @@ body {
   border: none;
   border-bottom: 2px solid #a21747;
   margin-bottom: 5px;
+  font-family: 'Orbitron', sans-serif;
 }
 
 
